chore: added test cases